# 0d-master-api

./: .clippy.toml  .dockerignore  .env.example  0d-dev-instructions.md  AGENTS.md  Cargo.toml  Dockerfile  README.md  cloudbuild.prod.yaml  cloudbuild.yaml  compose.dev.yaml  diesel.toml  openapi.json
.github/workflows/: pragma.yaml
contracts/: .gitignore  Scarb.toml
contracts/src/: deposit_proxy.cairo  lib.cairo
contracts/tests/: test_contract.cairo
crates/0d-api/: Cargo.toml
crates/0d-api/src/: docs.rs  errors.rs  helpers.rs  lib.rs  middleware.rs  router.rs
crates/0d-api/src/dto/: deposit.rs  mod.rs  query.rs  response.rs  user.rs  vault.rs
crates/0d-api/src/handlers/: deposits.rs  mod.rs
crates/0d-api/src/handlers/users/: historical.rs  kpis.rs  mod.rs  profile.rs  redeems.rs  summary.rs  transactions.rs
crates/0d-api/src/handlers/vaults/: apr.rs  composition.rs  get.rs  kpis.rs  liquidity.rs  list.rs  misc.rs  mod.rs  share_price.rs  stats.rs  timeseries.rs
crates/0d-db/: Cargo.toml
crates/0d-db/migrations/2025-09-16-123303_init-db-schema/: up.sql
crates/0d-db/migrations/2025-09-22-163832_add_start_block_to_vault/: down.sql
crates/0d-db/migrations/2025-09-24-052025-0000_create_user_portfolio_history/: up.sql
crates/0d-db/migrations/2025-10-07-101200_create_deposit_intents/: down.sql  up.sql
crates/0d-db/migrations/2025-10-10-124848_add_reports_table/: down.sql  up.sql
crates/0d-db/migrations/2025-10-23-231700-0000_add_proxy_address_to_vault/: down.sql  up.sql
crates/0d-db/src/: errors.rs  lib.rs  pool.rs  schema.rs  types.rs
crates/0d-db/src/models/: attribution.rs  deposit_intent.rs  indexer_state.rs  mod.rs  user.rs  user_kpi.rs  user_portfolio_history.rs  user_position.rs  user_transaction.rs  vault.rs  vault_report.rs
crates/0d-indexer/: Cargo.toml
crates/0d-indexer/src/: lib.rs
crates/0d-indexer/src/vaults/: helpers.rs  mod.rs  starknet.rs  state.rs
crates/0d-kpi/: Cargo.toml
crates/0d-kpi/src/: cost_basis.rs  error.rs  lib.rs  service.rs  sharpe.rs
crates/0d-master/: Cargo.toml
crates/0d-master/src/: alternative_client.rs  client.rs  dto.rs  error.rs  lib.rs  traits.rs
crates/0d-master/src/clients/: jaffar.rs  mapping.rs  mod.rs
crates/0d-master/src/clients/jaffar/: mod.rs  types.rs
crates/0d-master/src/clients/vesu/: mod.rs  types.rs
crates/0d-metrics/: Cargo.toml
crates/0d-metrics/src/: lib.rs
crates/0d-quoting/: Cargo.toml
crates/0d-quoting/src/: currencies.rs  lib.rs
crates/0d-relayer/: Cargo.toml
crates/0d-relayer/src/: config.rs  lib.rs  queue.rs  repository.rs  service.rs  starknet.rs  task.rs
crates/0d-types/: Cargo.toml
crates/0d-types/src/: currency.rs  lib.rs
crates/pragma-api/: Cargo.toml
crates/pragma-api/src/: docs.rs  errors.rs  helpers.rs  lib.rs  router.rs
crates/pragma-api/src/dto/: common.rs  mod.rs  portfolio.rs  query.rs  response.rs  user.rs  vault.rs
crates/pragma-api/src/handlers/: mod.rs
crates/pragma-api/src/handlers/users/: historical.rs  kpis.rs  mod.rs  pending_assets.rs  profile.rs  redeems.rs  summary.rs  transactions.rs
crates/pragma-api/src/handlers/vaults/: apr.rs  composition.rs  deposit.rs  get.rs  kpis.rs  liquidity.rs  list.rs  misc.rs  mod.rs  stats.rs  test-extended.sh  timeseries.rs
crates/pragma-db/: Cargo.toml
crates/pragma-db/migrations/2025-09-19-035152-0000_add_sortino_ratio_to_user_kpis/: down.sql  up.sql
crates/pragma-db/migrations/2025-09-19-055538-0000_add_share_balance_to_user_kpis/: down.sql  up.sql
crates/pragma-db/migrations/2025-09-22-163832_add_start_block_to_vault/: up.sql
crates/pragma-db/migrations/2025-09-24-043824-0000_add_synced_status_to_indexer_state/: down.sql  up.sql
crates/pragma-db/migrations/2025-09-24-052025-0000_create_user_portfolio_history/: down.sql
crates/pragma-db/migrations/2025-12-01-000000_create_deposit_requests/: down.sql  up.sql
crates/pragma-db/src/: lib.rs  schema.rs  types.rs
crates/pragma-db/src/models/: deposit_request.rs  indexer_state.rs  mod.rs  user.rs  user_kpi.rs  user_portfolio_history.rs  user_position.rs  user_transaction.rs  vault.rs
crates/pragma-indexer/: Cargo.toml
crates/pragma-indexer/src/: lib.rs  task.rs
crates/pragma-indexer/src/vaults/: extended.rs  helpers.rs  mod.rs  starknet.rs  state.rs
crates/pragma-kpi/: Cargo.toml
crates/pragma-kpi/src/: cost_basis.rs  drawdown.rs  lib.rs  service.rs  sharpe.rs  sortino.rs  task.rs
crates/pragma-master/: Cargo.toml
crates/pragma-master/src/: alternative_client.rs  dto.rs  lib.rs
crates/pragma-quoting/: Cargo.toml
crates/pragma-quoting/src/: lib.rs  pyth.rs  quoted_assets.rs
docs/: models.mermaid  openapi.yaml
helm/: Chart.yaml  values.yaml
helm/templates/: _helpers.tpl  deployment.yaml  externalSecret.yaml  hpa.yaml  ingress.yaml  pdb.yaml  pvc.yaml  secretStore.yaml  service.yaml  serviceaccount.yaml
