[package]
name = "zerod_api"
version.workspace = true
edition.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
rust-version.workspace = true
exclude.workspace = true

[lints]
workspace = true

[dependencies]
zerod_db.workspace = true
zerod_kpi.workspace = true
zerod_master.workspace = true
zerod_types.workspace = true
pragma-common.workspace = true
zerod_quoting.workspace = true
zerod_metrics.workspace = true

async-trait.workspace = true
anyhow.workspace = true
axum.workspace = true
axum-extra.workspace = true
bigdecimal.workspace = true
chrono.workspace = true
deadpool-diesel.workspace = true
diesel.workspace = true
dotenvy.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
utoipa.workspace = true
utoipa-swagger-ui.workspace = true
utoipauto.workspace = true
rust_decimal.workspace = true
hex.workspace = true
tiny-keccak.workspace = true
ulid.workspace = true

axum-tracing-opentelemetry.workspace = true
reqwest.workspace = true
tower_governor.workspace = true
