[package]
name = "zerod_db"
version.workspace = true
edition.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
rust-version.workspace = true
exclude.workspace = true

[lints]
workspace = true

[dependencies]
pragma-common.workspace = true

anyhow.workspace = true
bigdecimal.workspace = true
chrono.workspace = true
clap.workspace = true
deadpool-diesel.workspace = true
diesel_migrations.workspace = true
diesel.workspace = true
dotenvy.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
rust_decimal.workspace = true
utoipa.workspace = true
