[package]
name = "zerod_metrics"
version.workspace = true
edition.workspace = true
description = "0D metrics utilities"
homepage.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
opentelemetry.workspace = true
