[package]
name = "zerod_quoting"
version.workspace = true
edition.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
rust-version.workspace = true
exclude.workspace = true

[lints]
workspace = true

[dependencies]
pragma-rs.workspace = true
pragma-common.workspace = true

anyhow.workspace = true
async-trait.workspace = true
dashmap.workspace = true
futures.workspace = true
rust_decimal.workspace = true
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
utoipa.workspace = true
reqwest.workspace = true
moka.workspace = true
